[gd_scene load_steps=27 format=3 uid="uid://dg8667mc6ngic"]

[ext_resource type="Texture2D" uid="uid://do8ng61hcsi6o" path="res://resources/enemys/ghost/Unbenannt.png" id="1_dlmty"]
[ext_resource type="Script" uid="uid://tiao3xugn3b2" path="res://scripts/boss.gd" id="1_neq0i"]
[ext_resource type="Texture2D" uid="uid://dm5q2ri0pjk1p" path="res://resources/enemys/ghost/die.png" id="3_jncid"]
[ext_resource type="Texture2D" uid="uid://bylcw45ia0mww" path="res://resources/enemys/ghost/preshadow.png" id="4_qnbj4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dlmty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dlmty"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqpjq"]
atlas = ExtResource("1_dlmty")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cdgk"]
atlas = ExtResource("1_dlmty")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsl3t"]
atlas = ExtResource("1_dlmty")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eiau"]
atlas = ExtResource("3_jncid")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2fc"]
atlas = ExtResource("3_jncid")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqd3i"]
atlas = ExtResource("3_jncid")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mautr"]
atlas = ExtResource("3_jncid")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho3mf"]
atlas = ExtResource("3_jncid")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7apjh"]
atlas = ExtResource("3_jncid")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh5fr"]
atlas = ExtResource("3_jncid")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avx2"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f346"]
atlas = ExtResource("1_dlmty")
region = Rect2(50, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onds"]
atlas = ExtResource("1_dlmty")
region = Rect2(100, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs1x"]
atlas = ExtResource("1_dlmty")
region = Rect2(150, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_neq0i"]
atlas = ExtResource("1_dlmty")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jncid"]
atlas = ExtResource("1_dlmty")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnbj4"]
atlas = ExtResource("1_dlmty")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3bxh"]
atlas = ExtResource("1_dlmty")
region = Rect2(150, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlq0"]
atlas = ExtResource("4_qnbj4")
region = Rect2(0, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_wqpjq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlmty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqpjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cdgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsl3t")
}],
"loop": false,
"name": &"despawn",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eiau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqd3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mautr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7apjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh5fr")
}],
"loop": false,
"name": &"die",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f346")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs1x")
}],
"loop": false,
"name": &"fire",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neq0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jncid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnbj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3bxh")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlq0")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dlq0")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"preshadow",
"speed": 5.0
}]

[node name="Boss" type="Area2D"]
script = ExtResource("1_neq0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dlmty")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wqpjq")
animation = &"die"
autoplay = "idle"

[node name="PositionChange" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="PositionChange" to="." method="_on_position_change_timeout"]
